fix: alignment + add logo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,5 +41,10 @@ input {
 
 .keybored__logo {
   position: relative;
-  right: 5em;
+  right: 1em;
+}
+
+#div-spacing {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
